Refactor to use constants